tests/compile-fail/cache_with_args.stderr
error: rules with arguments cannot use #[cache]
 --> $DIR/cache_with_args.rs:5:10
  |
5 |     rule foo(x: u32) = "foo" //~ ERROR
  |          ^^^
